--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* Distribute items evenly along the main axis */
+  }
+  
+  .gallery img {
+    max-width: calc(33.33% - 10px); /* Set maximum width for each image */
+    max-height: 200px; /* Set maximum height for each image */
+    margin-bottom: 10px; /* Add space between rows */
+  }
+  
